# IEEESeniorDesign2018

IEEE2018SeniorDesign-master/: -pipe  2q  Makefile  README.md  Robot.cpp  Robot2.cpp  Robot3.cpp  SensorLibTest.cpp  ledRead  rs232.c
IEEE2018SeniorDesign-master/Arduino/MotorController/: MotorController.ino  Motors.cpp  Motors.h
IEEE2018SeniorDesign-master/Arduino/MotorController/.build/: environment.pickle
IEEE2018SeniorDesign-master/Arduino/MotorController/.build/mega2560/: Makefile  Makefile.deps
IEEE2018SeniorDesign-master/Arduino/MotorController/src/: MotorController.ino  Motors.h
IEEE2018SeniorDesign-master/IRRoute/: blink  irRead  ledRead.c
IEEE2018SeniorDesign-master/Libraries/: .SensorLib2.cpp.swp  Adafruit_VL6180X.h  Adafruit_VL6180x.h.gch  SensorLib2.cpp  SensorLib2.h  VL53L0X.c  navigation.cpp  navigation.h  pigpio.c  rs232.h.gch  vl53l0x_api_strings.c  vl53l0x_platform.c  vl53l0x_setup.h
IEEE2018SeniorDesign-master/Libraries/RTIMULib2/RTIMULib/: .SensorLib2.h.swp  SensorLib2.h  pigpio.h
IEEE2018SeniorDesign-master/Libraries/inc/: Adafruit_VL6180x.h.gch  SensorLib2.h  ledRead.h
IEEE2018SeniorDesign-master/Libraries/src/: Adafruit_VL6180X.cpp  SensorLib2.cpp  VL53L0X.c  ledRead.c  vl53l0x_setup.cpp
IEEE2018SeniorDesign-master/MotorController/: Motors.cpp
IEEE2018SeniorDesign-master/Oldfiles/: Makefile2  Makefile3
IEEE2018SeniorDesign-master/Oldfiles/Sensors/: Makefile
IEEE2018SeniorDesign-master/Oldfiles/Sensors/VL53L0x/: Makefile
IEEE2018SeniorDesign-master/Oldfiles/Serial/: S.cpp  arduino_test  arduino_test.cpp  lcd.c  robot_test  robot_test.cpp
IEEE2018SeniorDesign-master/Oldfiles/VL53L0x/: Makefile
IEEE2018SeniorDesign-master/Oldfiles/VL53L0x/examples/: vl53l0x_SingleRanging_Example.c  vl53l0x_SingleRanging_Long_Range_Example.c
IEEE2018SeniorDesign-master/Output/: RTIMULib.ini  Robot
IEEE2018SeniorDesign-master/PIGPIO/examples/: IRRead  ir_hash_c  ledBlink.c  ledBlink.cpp  ledRead  ledRead.c  read  readLed  test_ir_hasher.c
IEEE2018SeniorDesign-master/RTIMULib2/Linux/RTIMULibDrive/: RTIMULibDriveCombo.cpp
IEEE2018SeniorDesign-master/Sensors/IRLED/: IRtest.c
IEEE2018SeniorDesign-master/Sensors/SensorSynth/: Makefile  SensorLib.cpp  SensorLib.h
IEEE2018SeniorDesign-master/Sensors/SensorSynth/inc/: SensorLib.h  SensorLib2.h
IEEE2018SeniorDesign-master/Sensors/SensorSynth/src/: SensorLib.cpp  SensorLib2.cpp  VL53L0X.cpp  ledRead.c  vl53l0x_api.c  vl53l0x_api_core.c
IEEE2018SeniorDesign-master/Sensors/Test/: Adafruit_VL6180X.cpp  Adafruit_VL6180X.h  VL53L0X.cpp  VL53L0X.h  multisensors.cpp
IEEE2018SeniorDesign-master/Sensors/examples/: vl.cpp
IEEE2018SeniorDesign-master/Sensors/vl530x_Linux/: CMakeLists.txt  README.md  VL53L0X.cpp
IEEE2018SeniorDesign-master/Sensors/vl530x_Linux/cmake_modules/: CPack.cmake  SetGCC6.cmake  vl53l0xConfig.cmake
IEEE2018SeniorDesign-master/Sensors/vl530x_Linux/examples/: CMakeLists.txt  continuousMultipleSensors.cpp  single.cpp  singleMinimal.cpp  singleMultipleSensors.cpp
IEEE2018SeniorDesign-master/Testfiles/: RTIMULibDriveTest.cpp
IEEE2018SeniorDesign-master/VL53L0x/examples/: VL53L0X.c
IEEE2018SeniorDesign-master/objects/: ledRead
MotorController/.build/mega2560/: Makefile.sketch  firmware.elf  firmware.hex
MotorController/.build/mega2560/arduino/: dependencies.d
MotorController/.build/mega2560/src/: MotorController.d  Motors.d  dependencies.d
MotorController/.build/uno/: Makefile  Makefile.sketch  firmware.elf  firmware.hex
MotorController/.build/uno/Arduino-PID-Library/: PID_v1.d
MotorController/.build/uno/Encoder-Library/: Encoder.d
MotorController/.build/uno/arduino/: dependencies.d
MotorController/.build/uno/src/: MotorController.d  Motors.d
MotorController/src/: Motors.cpp
(+27 files in other folders)
